# WebrtcAudioProcess-Cmake

./: CMakeLists.txt  test.c  webrtc_audio_process.cc  webrtc_audio_process.h
webrtc/modules/audio_processing/: audio_processing_impl.cc
webrtc/modules/audio_processing/echo_detector/: normalized_covariance_estimator.cc
webrtc/modules/audio_processing/logging/: apm_data_dumper.h
